Migrated to python 3, still needs comprehensive testing

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,17 @@ target/
 .project
 .pydevproject
 .idea
+# Devenv
+.devenv*
+devenv.local.nix
+devenv*
+.envrc
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
+
+# 2to3 migration
+*.bak
